# calculator

./: .clang-format  .clang-tidy  .env.example  .gitignore  CMakeLists.txt  Makefile
config/: calculator.env.example
src/: cache.cpp  cache.h  calculator.cpp  calculator.h  checker.cpp  checker.h  database.cpp  database.h  exceptions.h  logger.cpp  logger.h  main.cpp  parser.cpp  parser.h  printer.cpp  printer.h  runner.cpp  runner.h  server.cpp  server.h  session.cpp  session.h  types.cpp  types.h
systemd/: calculator.service
tests/: test_calculator.cpp  test_checker.cpp  test_parser.cpp  test_server.cpp
